--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.1-901-1.jdbc4</version>
+			<version>42.2.5</version>
 		</dependency>
 
 		<dependency>
