--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/quizappdb
-spring.datasource.username=admin 
+spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.profiles.active = dev
